testing loft components

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <link rel="icon" type="image/x-icon" href="/src/assets/favicon.png" />
+    <link href="https://assets.xometry.com/loft/loft@latest/loft.css" rel="stylesheet">
+    <link href="https://assets.xometry.com/loft/loft@latest/utility-classes.css" rel="stylesheet">
+    <script src="https://assets.xometry.com/loft/loft@latest/loft.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Education</title>
